style.css
body
{
/* margin-top: 2ex; */
/* background-color: #edfffc; */
color: black;
}

a:link {
color: #5555cc;
text-decoration: underline;
}

a:visited {
color: #000066;
text-decoration: underline;
}

/* Navbar related --------------------------------------------------- */

#navbar
{
position: absolute;
left: 1em;
width: 13em;
background-color: #80a0a0;
color: white;
text-align: left;
margin-top: 0em;
border-width: 0;
}

#navbar li
{
position: relative;
overflow: hidden;
margin-left: 0em;
left: -2.5em;
padding-left: .5em;
margin-right: -2.5em;
}

#navbar li:hover
{
overflow: hidden;
background-color: #608080;
/* background-color: #b9005f;*/
}

#navbar ul
{
list-style-type: none;
margin-top: .5em;
margin-bottom: .8em;
}

#navbar a
{
overflow: hidden;
font-size: small;
font-weight: 500;
color: white;
text-decoration: none;
font-family: "arial";
}

#navbar a.gold
{
color:gold;
}

#navbar h4
{
font-style: normal;
font-size: .95em;
}

#navbar b.rtop,
#navbar b.rbottom
{
display:block;
background: white
}

#navbar b.rtop b
{
display: block;
height: 1px;
overflow: hidden;
background-color: #80a0a0;
}

#navbar b.rbottom b
{
display: block;
height: 1px;
overflow: hidden;
background-color: #80a0a0;
}

#navbar b.r1
{
margin: 0 5px;
}

#navbar b.r2
{
margin: 0 3px;
}

#navbar b.r3
{
margin: 0 2px;
}

#navbar b.rtop b.r4,
#navbar b.rbottom b.r4
{
margin: 0 1px;
height: 1px;
}

#top
{
background-color: #efefef;
margin-top: 0px;
}

#item
{
position: relative;
outline-style: groove;
outline-width: 3px;
outline-color: #e8e8e8;
padding-left: 1em;
padding-right: 1em;
padding-top: 1ex;
padding-bottom: 1ex;
margin-top: 0em;
margin-bottom: 0em;
}

/* Two-column what is/isn't it layout --------------------------------------- */

#leftwhat
{
float: left;
width: 50%;
padding-right: 0;
margin-right: 0;
}

#rightwhat
{
margin-left: 50%;
border-left: 2px solid #e8e8e8;
padding-left: 1.5em;
}

#wrap
{
position: relative;
width: 100%;
margin:0 auto;
font-size: .9em;
}

#endwrap
{
    clear: both;
    border-top: 2px solid #e8e8e8;
}

/* main --------------------------------------------------- */

#main
{
position: relative;
font-size: 1em;
left: 15em;
margin-top: 0em;
margin-right: 25em;
top: 0em;
min-width: 45em;
min-height: 45em;
padding-bottom: 1em;
}

#main h1
{
font-weight: bold;
color: #99003f;
}

#main h2
{
font-size: 1.2em;
margin-bottom: 0ex;
color: #99003f;
}

#main h3
{
font-size: 1.1em;
color: #99003f;
margin-bottom: 0ex;
}

#main .catchphrase
{
margin-top: 1ex;
text-align: left;
font-style: italic;
padding-left: 6px;
}

#main p,
#main h1,
#main h2,
#main h3,
#main h4,
#main pre,
#main table
{
margin-left: 6px;
margin-right: 6px;
}

#main ul
{
margin-right: 6px;
margin-top: 0em;
}

#main .command
{
margin-bottom: 1ex;
margin-top: 1ex;
text-align: center;
font-family: monospace;
}

#main li
{
list-style-type: disc;
position: relative;
left: -1.5em;
overflow: visible;
}


/* Header/footer styles -----------------------------------------------*/

#big-title
{
font-family: sans-serif;
font-size: 5em;
color: #990033;
margin-top: 0em;
margin-bottom: 0em;
padding-left: 4px;
}

#medium-title
{
font-family: sans-serif;
font-size: 3em;
margin-bottom: 0.2em;
}

/* Footer */

#footer
{
position: relative;
font-size: 0.7em;
border-top: 2px solid #e8e8e8;
left: 2em;
margin-right: 18em;
/* padding-left: 2em; */
text-align: center;
min-width: 86em;
}

/* background is used to draw a rounded cartouche around a h2 */

.background
{
background: #e8e8e8;
color: #99003f;
margin-top: 0;
}

.background h2
{
font-size: 1.2em;
height: 0.8em;
margin-bottom: 0;
margin-top: 0;
color: #99003f;
}

.background b.rtop,
.background b.rbottom
{
display:block;
background: white
}

.background b.rtop b,
.background b.rbottom b
{
display: block;
height: 1px;
overflow: hidden;
background: #e8e8e8;
}

.background b.r1
{
margin: 0 5px;
}

.background b.r2
{
margin: 0 3px;
}

.background b.r3
{
margin: 0 2px;
}

.background b.rtop b.r4,
.background b.rbottom b.r4
{
margin: 0 1px;
height: 1px;
}

.background h1,
.background h2,
.background p
{
padding-top: 0;
margin-top: 0;
padding-bottom: 8px;
}

h4
{
font-style: normal;
font-size: .95em;
}

table#table1
{
  width:90%; 
  margin-left:5%; 
  margin-right:25%;
}

/* pkglist related --------------------------------------------------- */

.pkglist a {
    background: url('https://sourceware.org/icons/ball.gray.gif')
                no-repeat;
    background-size: 10px 10px;
    background-position: left center;
    padding-left: 10px;
}

/* category-list related --------------------------------------------------- */

#category-list
{
    -moz-column-width: 5em; 
    -webkit-column-width: 5em;
    column-width: 5em;
    width: 50%;
    margin: auto;
}

/* packaging related --------------------------------------------------- */

table.sample-email
{
    width: 50%;
    margin-left: 5%;
    border-collapse: collapse;
}

table.sample-email td
{
    border-width: 1px;
    border-style: solid;
}

.sample-preformat
{
    width:50%;
    margin-left:5%;
}

